completed no9 class with junit tests